--- a/build.gradle
+++ b/build.gradle
@@ -14,13 +14,22 @@
  * limitations under the License.
  */
 
+ buildscript {
+     repositories {
+         jcenter()
+     }
+     dependencies {
+         classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1'
+     }
+ }
+ 
 plugins {
-    id 'com.jfrog.bintray' version '1.6'
-    id 'com.github.hierynomus.license' version '0.11.0'
-    id 'net.nemerosa.versioning' version '1.7.1'
-    id 'com.github.ben-manes.versions' version '0.12.0'
-    id 'com.gradle.plugin-publish' version '0.9.4'
-    id 'com.github.kt3k.coveralls' version '2.6.3'
+    id 'com.jfrog.bintray' version '1.8.1'
+    id 'com.github.hierynomus.license' version '0.14.0'
+    id 'net.nemerosa.versioning' version '2.7.1'
+    id 'com.github.ben-manes.versions' version '0.20.0'
+    id 'com.gradle.plugin-publish' version '0.10.0'
+    id 'com.github.kt3k.coveralls' version '2.8.2'
     id 'idea'
     id 'groovy'
     id 'maven-publish'
@@ -30,22 +39,34 @@ apply from: 'gradle/code-coverage.gradle'
 apply from: 'gradle/code-quality.gradle'
 apply from: 'gradle/publish.gradle'
 
+apply plugin: 'eclipse'
+
+apply plugin: 'java'
+apply plugin: 'com.github.johnrengelman.shadow'
+
 repositories {
-    jcenter()
     maven { url 'http://dl.bintray.com/content/aalmiray/kordamp' }
+    mavenCentral()
+    jcenter()
 }
 
 dependencies {
     compile gradleApi()
-    compile 'com.overzealous:remark:1.0.0',
-        'org.jsoup:jsoup:1.9.1',
-        'org.apache.commons:commons-lang3:3.4',
-        'org.pegdown:pegdown:1.5.0'
+    compile 'com.overzealous:remark:1.1.0'
+    compile 'org.jsoup:jsoup:1.11.3'
+    compile 'org.apache.commons:commons-lang3:3.7'
+    compile 'com.vladsch.flexmark:flexmark-all:0.42.10'
     testCompile('org.spockframework:spock-core:1.0-groovy-2.4') {
         exclude group: 'org.codehaus.groovy', module: 'groovy-all'
         exclude group: 'org.hamcrest', module: 'hamcrest-core'
     }
-    testCompile 'cglib:cglib-nodep:3.2.2'
+    testCompile 'cglib:cglib-nodep:3.2.8'
+}
+
+test {
+    testLogging {
+        showStandardStreams = true
+    }
 }
 
 javadoc {
@@ -59,6 +80,11 @@ javadoc {
     options.windowTitle = "$project.name $project.version API"
     options.docTitle    = "$project.name $project.version API"
     options.links       = ['http://docs.oracle.com/javase/7/docs/api/']
+}
+
+tasks.withType(GroovyCompile) {
+    sourceCompatibility = project.sourceCompatibility
+    targetCompatibility = project.targetCompatibility
 }
 
 task sourcesJar(type: Jar) {
