--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-version = 1.3.0
-group = org.kordamp
+version = 0.1.0
+group = ch.poole.gradle
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 project_description=Markdown/HTML plugin for gradle (fork)
-project_website=https://github.com/aalmiray/markdown-gradle-plugin
-project_issues=https://github.com/aalmiray/markdown-gradle-plugin/issues
-project_vcs=https://github.com/aalmiray/markdown-gradle-plugin.git
+project_website=https://github.com/simonpoole/markdown-gradle-plugin
+project_issues=https://github.com/simonpoole/markdown-gradle-plugin/issues
+project_vcs=https://github.com/simonpoole/markdown-gradle-plugin.git
