Fix gradle 7 compatibility

--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -91,6 +91,7 @@ def pomConfig = {
 publishing {
     publications {
         mavenJava(MavenPublication) {
+            from components.java
             artifact sourcesJar
             artifact javadocJar
 
