Update dependencies and migrate to hard fork of remark

--- a/.externalToolBuilders/.gitignore
+++ b/.externalToolBuilders/.gitignore
@@ -1,2 +1,3 @@
 /org.eclipse.buildship.core.gradleprojectbuilder.launch
 /org.eclipse.jdt.core.javabuilder (4).launch
+/org.eclipse.jdt.core.javabuilder (8).launch
