--- a/.settings/.gitignore
+++ b/.settings/.gitignore
@@ -1,3 +1,4 @@
 /org.eclipse.buildship.core.prefs
 /org.eclipse.jdt.core.prefs
 /org.eclipse.jdt.groovy.core.prefs
+/org.sonarlint.eclipse.core.prefs
