--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@
  
 plugins {
     id 'com.github.johnrengelman.shadow' version '8.1.1'
-    id 'com.github.hierynomus.license' version '0.14.0'
+    id 'com.github.hierynomus.license' version '0.16.1'
     id 'net.nemerosa.versioning' version '2.7.1'
     id 'com.github.ben-manes.versions' version '0.20.0'
     id 'com.gradle.plugin-publish' version '0.21.0'
@@ -36,17 +36,17 @@ apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 repositories {
+    mavenLocal()
     mavenCentral()
-    jcenter()
 }
 
 dependencies {
     implementation gradleApi()
-    implementation 'com.overzealous:remark:1.1.0'
-    implementation 'org.jsoup:jsoup:1.11.3'
-    implementation 'org.apache.commons:commons-lang3:3.7'
+    implementation 'ch.poole.div:remark:1.2.0'
+    implementation 'org.jsoup:jsoup:1.18.1'
+    implementation 'org.apache.commons:commons-lang3:3.15.0'
     implementation 'com.vladsch.flexmark:flexmark-all:0.50.44'
-    testImplementation('org.spockframework:spock-core:1.0-groovy-2.4') {
+    testImplementation('org.spockframework:spock-core:2.3-groovy-3.0') {
         exclude group: 'org.codehaus.groovy', module: 'groovy-all'
         exclude group: 'org.hamcrest', module: 'hamcrest-core'
     }
